--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi identikit</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,12 +16,12 @@
 <body>
 
     <nav class="navbar">
-        <a href="../index.html" class="nav-link">Inicio</a>
-        <a href="../pagina2.html" class="nav-link">Sobre mi</a>
-        <a href="../tierlist.html" class="nav-link">Tierlist</a>
-        <a href="../trivia/trivia.html" class="nav-link">Horror Trivia</a>
-        <a href="../lista.html" class="nav-link">Adaptaciones</a>
-        <a href="../playlist.html" class="nav-link">Playlist</a>
+        <a href="./index.html" class="nav-link">Inicio</a>
+        <a href="./pagina2.html" class="nav-link">Sobre mi</a>
+        <a href="./tierlist.html" class="nav-link">Tierlist</a>
+        <a href="./trivia/trivia.html" class="nav-link">Horror Trivia</a>
+        <a href="./lista.html" class="nav-link">Adaptaciones</a>
+        <a href="./playlist.html" class="nav-link">Playlist</a>
     </nav>
 
     <p>Bienvenido a mi pagina web</p>
@@ -48,12 +48,12 @@
         <div class="footer-col footer-col2">
             <h3><u>Mapa del sitio</u> </h3>
             <ul class="footer-list">
-                <li><a href="index.html" class="footer-link">Inicio</a></li>
-                <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-                <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-                <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-                <li><a href="lista.html" class="footer-link">Listas</a></li>
-                <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+                <li><a href="./index.html" class="footer-link">Inicio</a></li>
+                <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+                <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+                <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+                <li><a href="./lista.html" class="footer-link">Listas</a></li>
+                <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
             </ul> <a href="#" class="footer-link footer-volver-arriba"> Volver arriba</a>
         </div>
 
@@ -72,5 +72,6 @@
 
 
 </body>
+
 
 </html>
