--- a/lista.html
+++ b/lista.html
@@ -10,28 +10,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/lista.css">
+  <link rel="stylesheet" href="css/lista.css">
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
   <nav>
-    <a href="../index.html">Inicio</a>
-    <a href="../pagina2.html">Sobre mi</a>
-    <a href="../tierlist.html">Tierlist</a>
-    <a href="../trivia/trivia.html">Horror Trivia</a>
-    <a href="../lista.html">Adaptaciones</a>
-    <a href="../playlist.html">Playlist</a>
+    <a href="index.html">Inicio</a>
+    <a href="pagina2.html">Sobre mi</a>
+    <a href="tierlist.html">Tierlist</a>
+    <a href="trivia/trivia.html">Horror Trivia</a>
+    <a href="lista.html">Adaptaciones</a>
+    <a href="playlist.html">Playlist</a>
   </nav>
 
-  <!-- Título principal -->
   <h1>Adaptaciones de libros</h1>
 
-  <!-- TABLA DE ADAPTACIONES -->
   <table border="1">
     <tr>
-      <!-- SERIES -->
       <td>
         <h2>Series</h2>
         <ul>
@@ -108,7 +104,6 @@
         </ul>
       </td>
 
-      <!-- PELÍCULAS -->
       <td>
         <h2>Películas</h2>
         <ul>
@@ -211,7 +206,7 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
     </tr>
   </table>
 
-   <!-- Footer -->
+   
 <footer class="footer-custom">
     <div class="footer-col footer-col1">
         <h3>Hecho por Yanina Lencina</h3>
@@ -242,4 +237,5 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
 
 </body>
 </html>
+
 
