--- a/lista.html
+++ b/lista.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/lista.css">
+  <link rel="stylesheet" href="./css/lista.css">
 </head>
 
 <body>
@@ -237,5 +237,6 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
 
 </body>
 </html>
+
 
 
