Fix stylesheet path and clean up HTML
Updated stylesheet link path and corrected HTML structure.

--- a/pagina2.html
+++ b/pagina2.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../css/pagina2.css">
+  <link rel="stylesheet" href="./css/pagina2.css">
 </head>
 
 <body>
@@ -52,12 +52,12 @@
         <div class="footer-col footer-col2">
             <h3><u>Mapa del sitio</u> </h3>
             <ul class="footer-list">
-                <li><a href="index.html" class="footer-link">Inicio</a></li>
-                <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-                <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-                <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-                <li><a href="lista.html" class="footer-link">Listas</a></li>
-                <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+                <li><a href="./index.html" class="footer-link">Inicio</a></li>
+                <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+                <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+                <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+                <li><a href="./lista.html" class="footer-link">Listas</a></li>
+                <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
             </ul> <a href="#" class="footer-link footer-volver-arriba"> Volver arriba</a>
         </div>
 
@@ -73,3 +73,4 @@
     </footer>
 </body>
 </html>
+
