--- a/pagina2.html
+++ b/pagina2.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/pagina2.css">
+  <link rel="stylesheet" href="css/pagina2.css">
 </head>
 
 <body>
@@ -73,4 +73,5 @@
     </footer>
 </body>
 </html>
+
 
