Fix HTML encoding issues in pagina2.html

--- a/pagina2.html
+++ b/pagina2.html
@@ -14,12 +14,12 @@
 
 <body>
   <nav>
-    <a href="../index.html">Inicio</a>
-    <a href="../pagina2.html">Sobre mi</a>
-    <a href="../tierlist.html">Tierlist</a>
-    <a href="../trivia/trivia.html">Horror Trivia</a>
-    <a href="../lista.html">Adaptaciones</a>
-    <a href="../playlist.html">Playlist</a>
+    <a href="./index.html">Inicio</a>
+    <a href="./pagina2.html">Sobre mi</a>
+    <a href="./tierlist.html">Tierlist</a>
+    <a href="./trivia/trivia.html">Horror Trivia</a>
+    <a href="./lista.html">Adaptaciones</a>
+    <a href="./playlist.html">Playlist</a>
   </nav>
 
   <p class="titulo"> <u>Sobre mi</u> </p>
@@ -73,6 +73,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
