--- a/tierlist.html
+++ b/tierlist.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/tierlist.css">
+  <link rel="stylesheet" href="./css/tierlist.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,17 +17,16 @@
 <body>
 
   <nav>
-    <a href="../index.html" class="nav-link">Inicio</a>
-    <a href="../pagina2.html" class="nav-link">Sobre mi</a>
-    <a href="../tierlist.html" class="nav-link">Tierlist</a>
-    <a href="../trivia/trivia.html" class="nav-link">Horror Trivia</a>
-    <a href="../lista.html" class="nav-link">Adaptaciones</a>
-    <a href="../playlist.html" class="nav-link">Playlist</a>
+    <a href="./index.html" class="nav-link">Inicio</a>
+    <a href="./pagina2.html" class="nav-link">Sobre mi</a>
+    <a href="./tierlist.html" class="nav-link">Tierlist</a>
+    <a href="./trivia/trivia.html" class="nav-link">Horror Trivia</a>
+    <a href="./lista.html" class="nav-link">Adaptaciones</a>
+    <a href="./playlist.html" class="nav-link">Playlist</a>
   </nav>
 
   <h1>Tier List</h1>
 
-  <!-- Tier S -->
   <section class="tier">
     <div class="tier-label tier-s">S</div>
     <div class="tier-content">
@@ -39,7 +38,6 @@
     </div>
   </section>
 
-  <!-- Tier A -->
   <section class="tier">
     <div class="tier-label tier-a">A</div>
     <div class="tier-content">
@@ -53,7 +51,6 @@
     </div>
   </section>
 
-  <!-- Tier B -->
   <section class="tier">
     <div class="tier-label tier-b">B</div>
     <div class="tier-content">
@@ -66,7 +63,6 @@
     </div>
   </section>
 
-  <!-- Tier C -->
   <section class="tier">
     <div class="tier-label tier-c c">C</div>
     <div class="tier-content">
@@ -79,7 +75,6 @@
     </div>
   </section>
 
-  <!-- footer -->
 <footer class="footer-custom">
     <div class="footer-col footer-col1">
         <h3>Hecho por Yanina Lencina</h3>
@@ -111,3 +106,4 @@
 
 </body>
 </html>
+
