Fix HTML structure and update links

--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <link rel="stylesheet" href="css/playlist.css">
+  <link rel="stylesheet" href="./css/playlist.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -152,4 +152,5 @@
         });
     });
 </script>
+
 
