Fix links and update stylesheet path in ganaste.html

--- a/trivia/ganaste.html
+++ b/trivia/ganaste.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/ganaste.css">
+  <link rel="stylesheet" href="./css/ganaste.css">
 </head>
 
 <body>
@@ -20,10 +20,11 @@
     <h2>Ganaste!</h2>
     <img src="https://i.gifer.com/XqyT.gif" alt="">
     <br>
-    <a href="trivia.html" class="btn-jugar">Volver a jugar</a>
+    <a href="./trivia.html" class="btn-jugar">Volver a jugar</a>
     <br><br>
-    <a href="../index.html" class="btn-inicio">Inicio</a>
+    <a href="./index.html" class="btn-inicio">Inicio</a>
   </center>
 </body>
 
 </html>
+
