--- a/trivia/trivia.html
+++ b/trivia/trivia.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horror Trivia</title>
 
-    <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- CSS externo -->
-    <link rel="stylesheet" href="/css/trivia.css">
+    <link rel="stylesheet" href="./css/trivia.css">
 </head>
 
 <body>
@@ -22,11 +20,12 @@
         <h2>¿Cuánto sabes de películas de terror?</h2>
 
         <a href="nivel1.html">
-            <img src="../imagen/start.gif" alt="Iniciar Trivia">
+            <img src="imagen/start.gif" alt="Iniciar Trivia">
         </a>
 
-        <a href="../index.html" class="btn-inicio">Inicio</a>
+        <a href="./index.html" class="btn-inicio">Inicio</a>
     </div>
 </body>
 
 </html>
+
