Fix HTML encoding and update file paths

--- a/trivia/nivel3.html
+++ b/trivia/nivel3.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/niveles.css">
+  <link rel="stylesheet" href="./css/niveles.css">
 </head>
 <body>
   <div class="contenedor">
     <div class="imagenes">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 3</h1>
@@ -98,3 +98,4 @@
   </script>
 </body>
 </html>
+
