Fix image paths and HTML structure in nivel2.html
Updated image paths and HTML structure for trivia question.

--- a/trivia/nivel2.html
+++ b/trivia/nivel2.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/niveles.css">
+  <link rel="stylesheet" href="./css/niveles.css">
 </head>
 <body>
   <div class="contenedor">
     <div class="imagenes">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 2</h1>
@@ -34,37 +34,37 @@
     const preguntas = [
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/jhonny.gif",
+        imagen: "imagen/jhonny.gif",
         correcta: ["El resplandor", "nivel3.html"],
         incorrecta: ["La bruja de Blair", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/sixsense.gif",
+        imagen: "imagen/sixsense.gif",
         correcta: ["Sexto sentido", "nivel3.html"],
         incorrecta: ["Ouija", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/psicosis.gif",
+        imagen: "imagen/psicosis.gif",
         correcta: ["Psicosis", "nivel3.html"],
         incorrecta: ["Psicopata americana", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/elconjuro.gif",
+        imagen: "imagen/elconjuro.gif",
         correcta: ["El conjuro", "nivel3.html"],
         incorrecta: ["Midsommar", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/elorfanato.gif",
+        imagen: "imagen/elorfanato.gif",
         correcta: ["El orfanato", "nivel3.html"],
         incorrecta: ["Los otros", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/blackphone.gif",
+        imagen: "imagen/blackphone.gif",
         correcta: ["Telefono negro", "nivel3.html"],
         incorrecta: ["Insidious", "incorrecta.html"]
       },
@@ -76,19 +76,19 @@
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/carrie.gif",
+        imagen: "imagen/carrie.gif",
         correcta: ["Carrie", "nivel3.html"],
         incorrecta: ["Evil dead", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/destinofinal.gif",
+        imagen: "imagen/destinofinal.gif",
         correcta: ["Destino final", "nivel3.html"],
         incorrecta: ["La masacre de Texas", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "../imagen/jennifersbody.gif",
+        imagen: "imagen/jennifersbody.gif",
         correcta: ["Diabolica tentacion", "nivel3.html"],
         incorrecta: ["Hereditary", "incorrecta.html"]
       }
@@ -114,3 +114,4 @@
   </script>
 </body>
 </html>
+
