Fix HTML structure and update image paths

--- a/trivia/nivel1.html
+++ b/trivia/nivel1.html
@@ -8,15 +8,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/css/niveles.css">
+  <link rel="stylesheet" href="./css/niveles.css">
 
 </head>
 <body>
   
   <div class="contenedor">
     <div class="imagenes">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
-      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
+      <img src="imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 1</h1>
@@ -100,3 +100,4 @@
   </script>
 </body>
 </html>
+
