--- a/playlist/hs3playlist.html
+++ b/playlist/hs3playlist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist</title>
-    <link rel="stylesheet" href="../css/cancionesplaylist.css">
+    <link rel="stylesheet" href="./css/cancionesplaylist.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,86 +14,86 @@
 
 <body>
   <nav>
-    <a href="../index.html" class="nav-link">Inicio</a>
-    <a href="../pagina2.html" class="nav-link">Sobre mi</a>
-    <a href="../tierlist.html" class="nav-link">Tierlist</a>
-    <a href="../trivia/trivia.html" class="nav-link">Horror Trivia</a>
-    <a href="../lista.html" class="nav-link">Adaptaciones</a>
-    <a href="../playlist.html" class="nav-link">Playlist</a>
+    <a href="./index.html" class="nav-link">Inicio</a>
+    <a href="./pagina2.html" class="nav-link">Sobre mi</a>
+    <a href="./tierlist.html" class="nav-link">Tierlist</a>
+    <a href="./trivia/trivia.html" class="nav-link">Horror Trivia</a>
+    <a href="./lista.html" class="nav-link">Adaptaciones</a>
+    <a href="./playlist.html" class="nav-link">Playlist</a>
   </nav>
 
   <div class="contenedor">
     <div class="aside">
-            <h1><a href="../playlist.html">Top Artists</a></h1>
+            <h1><a href="./playlist.html">Top Artists</a></h1>
             <ul>
                 <li>
                     <a href="../playlist.html" class="toggle">Taylor Swift</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/ts1playlist.html" >My Boy Only Breaks His Favourite Toys</a></li>
-                        <li><a href="../playlist/ts2playlist.html">Fortnight</a></li>
-                        <li><a href="../playlist/ts3playlist.html">The Smallest Man Who Ever Lived</a></li>
+                        <li><a href="./playlist/ts1playlist.html" >My Boy Only Breaks His Favourite Toys</a></li>
+                        <li><a href="./playlist/ts2playlist.html">Fortnight</a></li>
+                        <li><a href="./playlist/ts3playlist.html">The Smallest Man Who Ever Lived</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">Shawn Mendes</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/sm1playlist.html">Why Why Why</a></li>
-                        <li><a href="../playlist/sm2playlist.html">The Weight</a></li>
-                        <li><a href="../playlist/sm3playlist.html">Bad Reputation</a></li>
+                        <li><a href="./playlist/sm1playlist.html">Why Why Why</a></li>
+                        <li><a href="./playlist/sm2playlist.html">The Weight</a></li>
+                        <li><a href="./playlist/sm3playlist.html">Bad Reputation</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">Lil Peep</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/lp1playlist.html">Star Shopping</a></li>
-                        <li><a href="../playlist/lp2playlist.html">Nuts</a></li>
-                        <li><a href="../playlist/lp3playlist.html">The Brightside</a></li>
+                        <li><a href="./playlist/lp1playlist.html">Star Shopping</a></li>
+                        <li><a href="./playlist/lp2playlist.html">Nuts</a></li>
+                        <li><a href="./playlist/lp3playlist.html">The Brightside</a></li>
                     </ul>
                 </li>
 <li>
                     <a href="#" class="toggle">Harry Styles</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/hs1playlist.html">Little Freak</a></li>
-                        <li><a href="../playlist/hs2playlist.html">Golden</a></li>
-                        <li><a href="../playlist/hs3playlist.html">Music For a Sushi Restaurant</a></li>
+                        <li><a href="./playlist/hs1playlist.html">Little Freak</a></li>
+                        <li><a href="./playlist/hs2playlist.html">Golden</a></li>
+                        <li><a href="./playlist/hs3playlist.html">Music For a Sushi Restaurant</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">Tate McRae</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/tate1playlist.html">Grave</a></li>
-                        <li><a href="../playlist/tate2playlist.html">You Broke Me First</a></li>
-                        <li><a href="../playlist/tate3playlist.html">Sports Car</a></li>
+                        <li><a href="./playlist/tate1playlist.html">Grave</a></li>
+                        <li><a href="./playlist/tate2playlist.html">You Broke Me First</a></li>
+                        <li><a href="./playlist/tate3playlist.html">Sports Car</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">Sabrina Carpenter</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/sc1playlist.html">Nobody's Son</a></li>
-                        <li><a href="../playlist/sc2playlist.html">My Man on Willpower</a></li>
-                        <li><a href="../playlist/sc3playlist.html">Nonsense</a></li>
+                        <li><a href="./playlist/sc1playlist.html">Nobody's Son</a></li>
+                        <li><a href="./playlist/sc2playlist.html">My Man on Willpower</a></li>
+                        <li><a href="./playlist/sc3playlist.html">Nonsense</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">The Marias</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/tm1playlist.html">No one Noticed</a></li>
-                        <li><a href="../playlist/tm2playlist.html">Heavy</a></li>
-                        <li><a href="../playlist/tm3playlist.html">Back To Me</a></li>
+                        <li><a href="./playlist/tm1playlist.html">No one Noticed</a></li>
+                        <li><a href="./playlist/tm2playlist.html">Heavy</a></li>
+                        <li><a href="./playlist/tm3playlist.html">Back To Me</a></li>
                     </ul>
                 </li>
 
                 <li>
                     <a href="#" class="toggle">Lany</a>
                     <ul class="submenu">
-                        <li><a href="../playlist/lany1playlist.html">Malibu Nights</a></li>
-                        <li><a href="../playlist/lany2playlist.html">Thru These Tears</a></li>
-                        <li><a href="../playlist/lany3playlist.html">XXL</a></li>
+                        <li><a href="./playlist/lany1playlist.html">Malibu Nights</a></li>
+                        <li><a href="./playlist/lany2playlist.html">Thru These Tears</a></li>
+                        <li><a href="./playlist/lany3playlist.html">XXL</a></li>
                     </ul>
                 </li>
 
@@ -172,7 +172,6 @@ Ba-ba, ba-ba
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -181,12 +180,12 @@ Ba-ba, ba-ba
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="index.html" class="footer-link">Inicio</a></li>
-        <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="./index.html" class="footer-link">Inicio</a></li>
+        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -212,5 +211,6 @@ Ba-ba, ba-ba
   </script>
 </body>
 </html>
+
 
 
