--- a/playlist/lp3playlist.html
+++ b/playlist/lp3playlist.html
@@ -158,7 +158,7 @@ This isn't what love's like that's for sure
 
         <div class="spotify">
 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/7lbGqBMyCOK43hwY0Kcu7o?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-          <img src="../imagen/tbmv.mp4" alt="Spotify Cover">
+          <img src="../imagen/thebrighside.jpg" alt="Spotify Cover">
         </div>
       </div>
     </div>
@@ -204,5 +204,6 @@ This isn't what love's like that's for sure
   </script>
 </body>
 </html>
+
 
 
