--- a/playlist/hs1playlist.html
+++ b/playlist/hs1playlist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist</title>
-    <link rel="stylesheet" href="./css/cancionesplaylist.css">
+    <link rel="stylesheet" href="../css/cancionesplaylist.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -201,6 +201,7 @@ Just thinkin' about you
   </script>
 </body>
 </html>
+
 
 
 
