--- a/playlist/ts3playlist.html
+++ b/playlist/ts3playlist.html
@@ -172,7 +172,7 @@ The smallest man who ever lived
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="../index.html" class="footer-link">Inicio</a></li>
+        <li><a href="././index.html" class="footer-link">Inicio</a></li>
         <li><a href="../pagina2.html" class="footer-link">Sobre mi</a></li>
         <li><a href="../tierlist.html" class="footer-link">Tierlist</a></li>
         <li><a href="../trivia/trivia.html" class="footer-link">Trivia</a></li>
@@ -203,6 +203,7 @@ The smallest man who ever lived
   </script>
 </body>
 </html>
+
 
 
 
