--- a/trivia/trivia.html
+++ b/trivia/trivia.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/trivia.css">
+    <link rel="stylesheet" href="../css/trivia.css">
 </head>
 
 <body>
@@ -28,6 +28,7 @@
 </body>
 
 </html>
+
 
 
 
