Fix link to index page in trivia.html
Updated the link to the index page in the trivia HTML.

--- a/trivia/trivia.html
+++ b/trivia/trivia.html
@@ -23,11 +23,12 @@
             <img src="imagen/start.gif" alt="Iniciar Trivia">
         </a>
 
-        <a href="index.html" class="btn-inicio">Inicio</a>
+        <a href="../index.html" class="btn-inicio">Inicio</a>
     </div>
 </body>
 
 </html>
+
 
 
 
