--- a/trivia/nivel3.html
+++ b/trivia/nivel3.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/niveles.css">
+  <link rel="stylesheet" href="../css/niveles.css">
 </head>
 <body>
   <div class="contenedor">
@@ -98,4 +98,5 @@
   </script>
 </body>
 </html>
+
 
