--- a/playlist/lp3playlist.html
+++ b/playlist/lp3playlist.html
@@ -158,13 +158,13 @@ This isn't what love's like that's for sure
 
         <div class="spotify">
 <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/7lbGqBMyCOK43hwY0Kcu7o?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-          <img src="../imagen/thebrighside.jpg" alt="Spotify Cover">
+          <img src="../imagen/brightside.jpg" alt="Spotify Cover">
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Footer -->
+ 
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -204,6 +204,7 @@ This isn't what love's like that's for sure
   </script>
 </body>
 </html>
+
 
 
 
