Fix HTML formatting and update image path

--- a/trivia/trivia.html
+++ b/trivia/trivia.html
@@ -20,7 +20,7 @@
         <h2>¿Cuánto sabes de películas de terror?</h2>
 
         <a href="nivel1.html">
-            <img src="./imagen/start.gif" alt="Iniciar Trivia">
+            <img src="../imagen/start.gif" alt="Iniciar Trivia">
         </a>
 
         <a href="../index.html" class="btn-inicio">Inicio</a>
@@ -28,6 +28,7 @@
 </body>
 
 </html>
+
 
 
 
