Fix image paths and clean up HTML structure

--- a/trivia/nivel1.html
+++ b/trivia/nivel1.html
@@ -15,8 +15,8 @@
   
   <div class="contenedor">
     <div class="imagenes">
-      <img src="./imagen/blood.gif" alt="decoración sangre">
-      <img src="./imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 1</h1>
@@ -100,6 +100,7 @@
   </script>
 </body>
 </html>
+
 
 
 
