--- a/trivia/nivel2.html
+++ b/trivia/nivel2.html
@@ -13,8 +13,8 @@
 <body>
   <div class="contenedor">
     <div class="imagenes">
-      <img src="imagen/blood.gif" alt="decoración sangre">
-      <img src="imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 2</h1>
@@ -114,5 +114,6 @@
   </script>
 </body>
 </html>
+
 
 
