Fix image paths in nivel3.html

--- a/trivia/nivel3.html
+++ b/trivia/nivel3.html
@@ -13,8 +13,8 @@
 <body>
   <div class="contenedor">
     <div class="imagenes">
-      <img src="imagen/blood.gif" alt="decoración sangre">
-      <img src="imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
+      <img src="../imagen/blood.gif" alt="decoración sangre">
     </div>
 
     <h1>Pregunta 3</h1>
@@ -98,5 +98,6 @@
   </script>
 </body>
 </html>
+
 
 
