--- a/trivia/nivel2.html
+++ b/trivia/nivel2.html
@@ -34,37 +34,37 @@
     const preguntas = [
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/jhonny.gif",
+        imagen: "../imagen/jhonny.gif",
         correcta: ["El resplandor", "nivel3.html"],
         incorrecta: ["La bruja de Blair", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/sixsense.gif",
+        imagen: "../imagen/sixsense.gif",
         correcta: ["Sexto sentido", "nivel3.html"],
         incorrecta: ["Ouija", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/psicosis.gif",
+        imagen: "../imagen/psicosis.gif",
         correcta: ["Psicosis", "nivel3.html"],
         incorrecta: ["Psicopata americana", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/elconjuro.gif",
+        imagen: "../imagen/elconjuro.gif",
         correcta: ["El conjuro", "nivel3.html"],
         incorrecta: ["Midsommar", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/elorfanato.gif",
+        imagen: "../imagen/elorfanato.gif",
         correcta: ["El orfanato", "nivel3.html"],
         incorrecta: ["Los otros", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/blackphone.gif",
+        imagen: "../imagen/blackphone.gif",
         correcta: ["Telefono negro", "nivel3.html"],
         incorrecta: ["Insidious", "incorrecta.html"]
       },
@@ -76,19 +76,19 @@
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/carrie.gif",
+        imagen: "../imagen/carrie.gif",
         correcta: ["Carrie", "nivel3.html"],
         incorrecta: ["Evil dead", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/destinofinal.gif",
+        imagen: "../imagen/destinofinal.gif",
         correcta: ["Destino final", "nivel3.html"],
         incorrecta: ["La masacre de Texas", "incorrecta.html"]
       },
       {
         texto: "¿De que pelicula es la siguiente escena?",
-        imagen: "imagen/jennifersbody.gif",
+        imagen: "../imagen/jennifersbody.gif",
         correcta: ["Diabolica tentacion", "nivel3.html"],
         incorrecta: ["Hereditary", "incorrecta.html"]
       }
@@ -114,6 +114,7 @@
   </script>
 </body>
 </html>
+
 
 
 
