--- a/trivia/incorrecta.html
+++ b/trivia/incorrecta.html
@@ -12,29 +12,30 @@
     href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/incorrecta.css">
+  <link rel="stylesheet" href="../css/incorrecta.css">
 </head>
 
 <body>
   <div class="iconos">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
-    <img src="imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
+    <img src="../imagen/knife.gif" alt="">
   </div>
 
   <h1>Respuesta incorrecta !</h1>
 
-  <img src="imagen/ghostfacewonrg.gif" alt="Ghostface" class="gif-principal"><br>
+  <img src="../imagen/ghostfacewonrg.gif" alt="Ghostface" class="gif-principal"><br>
 
-  <a href="trivia.html" class="boton">Volver a intentar</a><br>
-  <a href="./index.html" class="boton-inicio">Inicio</a>
+  <a href="../trivia.html" class="boton">Volver a intentar</a><br>
+  <a href="../index.html" class="boton-inicio">Inicio</a>
 </body>
 
 </html>
+
 
