--- a/trivia/ganaste.html
+++ b/trivia/ganaste.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/ganaste.css">
+  <link rel="stylesheet" href="../css/ganaste.css">
 </head>
 
 <body>
@@ -27,4 +27,5 @@
 </body>
 
 </html>
+
 
