Fix HTML structure and update links in incorrecta.html

--- a/trivia/incorrecta.html
+++ b/trivia/incorrecta.html
@@ -32,10 +32,11 @@
 
   <img src="../imagen/ghostfacewonrg.gif" alt="Ghostface" class="gif-principal"><br>
 
-  <a href="../trivia.html" class="boton">Volver a intentar</a><br>
+  <a href="./trivia.html" class="boton">Volver a intentar</a><br>
   <a href="../index.html" class="boton-inicio">Inicio</a>
 </body>
 
 </html>
+
 
 
