--- a/trivia/ganaste.html
+++ b/trivia/ganaste.html
@@ -22,10 +22,11 @@
     <br>
     <a href="./trivia.html" class="btn-jugar">Volver a jugar</a>
     <br><br>
-    <a href="./index.html" class="btn-inicio">Inicio</a>
+    <a href="../index.html" class="btn-inicio">Inicio</a>
   </center>
 </body>
 
 </html>
+
 
 
