--- a/playlist/tate2playlist.html
+++ b/playlist/tate2playlist.html
@@ -154,7 +154,7 @@ You broke me first, oh
         </div>
 
         <div class="spotify">
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4l0RmWt52FxpVxMNni6i63?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>            <img src="../imagen/ybmf.jpg" alt="Spotify Cover">        
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4l0RmWt52FxpVxMNni6i63?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                    
             <img src="../imagen/ybmf.jpg" alt="Spotify Cover">
         </div>
       </div>
@@ -201,5 +201,6 @@ You broke me first, oh
   </script>
 </body>
 </html>
+
 
 
