--- a/playlist/tate2playlist.html
+++ b/playlist/tate2playlist.html
@@ -161,7 +161,6 @@ You broke me first, oh
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -170,12 +169,12 @@ You broke me first, oh
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="index.html" class="footer-link">Inicio</a></li>
-        <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="./index.html" class="footer-link">Inicio</a></li>
+        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -201,6 +200,7 @@ You broke me first, oh
   </script>
 </body>
 </html>
+
 
 
 
