--- a/playlist/sm1playlist.html
+++ b/playlist/sm1playlist.html
@@ -165,12 +165,12 @@ And 'round, and 'round, and 'round it goes
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="index.html" class="footer-link">Inicio</a></li>
-        <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="./index.html" class="footer-link">Inicio</a></li>
+        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -196,5 +196,6 @@ And 'round, and 'round, and 'round it goes
   </script>
 </body>
 </html>
+
 
 
