--- a/playlist/sc1playlist.html
+++ b/playlist/sc1playlist.html
@@ -172,7 +172,6 @@ Not anyone left for me to believe in
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -181,12 +180,12 @@ Not anyone left for me to believe in
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="index.html" class="footer-link">Inicio</a></li>
-        <li><a href="pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="./index.html" class="footer-link">Inicio</a></li>
+        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -212,5 +211,6 @@ Not anyone left for me to believe in
   </script>
 </body>
 </html>
+
 
 
