--- a/playlist/tate3playlist.html
+++ b/playlist/tate3playlist.html
@@ -184,7 +184,6 @@ While you drive it real far
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -193,12 +192,12 @@ While you drive it real far
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="./index.html" class="footer-link">Inicio</a></li>
-        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="../index.html" class="footer-link">Inicio</a></li>
+        <li><a href="../pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="../tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="../trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="../lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="../playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -224,6 +223,7 @@ While you drive it real far
   </script>
 </body>
 </html>
+
 
 
 
