--- a/playlist/sc3playlist.html
+++ b/playlist/sc3playlist.html
@@ -181,7 +181,6 @@ Most of these aren't gonna make
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer-custom">
     <div class="footer-col footer-col1">
       <h3>Hecho por Yanina Lencina</h3>
@@ -190,12 +189,12 @@ Most of these aren't gonna make
     <div class="footer-col footer-col2">
       <h3><u>Mapa del sitio</u></h3>
       <ul class="footer-list">
-        <li><a href="./index.html" class="footer-link">Inicio</a></li>
-        <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
-        <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
-        <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
-        <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
-        <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
+        <li><a href="../index.html" class="footer-link">Inicio</a></li>
+        <li><a href="../pagina2.html" class="footer-link">Sobre mi</a></li>
+        <li><a href="../tierlist.html" class="footer-link">Tierlist</a></li>
+        <li><a href="../trivia/trivia.html" class="footer-link">Trivia</a></li>
+        <li><a href="../lista.html" class="footer-link">Adaptaciones</a></li>
+        <li><a href="../playlist.html" class="footer-link">Playlist</a></li>
       </ul>
       <a href="#top" class="footer-link footer-volver-arriba">Volver arriba</a>
     </div>
@@ -221,6 +220,7 @@ Most of these aren't gonna make
   </script>
 </body>
 </html>
+
 
 
 
