--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a href="./pagina2.html" class="footer-link">Sobre mi</a></li>
                 <li><a href="./tierlist.html" class="footer-link">Tierlist</a></li>
                 <li><a href="./trivia/trivia.html" class="footer-link">Trivia</a></li>
-                <li><a href="./lista.html" class="footer-link">Listas</a></li>
+                <li><a href="./lista.html" class="footer-link">Adaptaciones</a></li>
                 <li><a href="./playlist.html" class="footer-link">Playlist</a></li>
             </ul> <a href="#" class="footer-link footer-volver-arriba"> Volver arriba</a>
         </div>
@@ -75,6 +75,7 @@
 
 
 </html>
+
 
 
 
