--- a/lista.html
+++ b/lista.html
@@ -131,7 +131,7 @@
             </section>
           </li>
           <li>
-            The Great Gatsby
+            El Gran Gatsby
             <section>
               <a href="
 https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><img src="imagen/ggbook.webp" alt="Libro GG"></a>
@@ -146,7 +146,7 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
             </section>
           </li>
           <li>
-            Les Miserables
+            Los Miserables
             <section>
               <a href="https://www.goodreads.com/book/show/150388.Los_miserables?ref=nav_sb_ss_1_14"><img src="imagen/lesmiserablesbook.jpg" alt="Libro LesM"></a>
               <a href="https://tv.apple.com/ar/movie/los-miserables/umc.cmc.74wk121u9bd0acbgzlr4o8rpq"><img src="imagen/lesmiserablesmovie.jpg" alt="Película LesM"></a>
@@ -160,7 +160,7 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
             </section>
           </li>
           <li>
-            The Silence of the Lambs
+            El Silencio de los Inocentes
             <section>
               <a href="https://www.goodreads.com/book/show/767968.El_silencio_de_los_inocentes?ref=nav_sb_ss_1_23"><img src="imagen/solbook.jpg" alt="Libro SOL"></a>
               <a href="https://www.primevideo.com/-/es/region/eu/detail/El-silencio-de-los-inocentes/0L45IKL11F3YF7PZJLBGHFPR0W?&language=es"><img src="imagen/solmovie.webp" alt="Película SOL"></a>
@@ -183,10 +183,10 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
             </section>
           </li>
           <li>
-            The Maze Runner
+            Maze Runner
             <section>
               <ol>
-                <li>The Maze Runner</li>
+                <li>Maze Runner</li>
                 <li>The Scorch Trials</li>
                 <li>The Death Cure</li>
               </ol>
@@ -237,6 +237,7 @@ https://www.goodreads.com/book/show/539319.El_gran_Gatsby?ref=nav_sb_ss_1_14"><i
 
 </body>
 </html>
+
 
 
 
